--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,10 +12,10 @@
       <!-- Right Nav Section -->
       <ul class="right">
         <li class="has-dropdown">
-          <a href="#">Posts</a>
+          <a href="#">Tasks</a>
           <ul class="dropdown">
-            <li><%= link_to "All Posts", posts_path %></li>
-            <li><%= link_to "New Post", new_post_path%></li>
+            <li><%= link_to "All Tasks", posts_path %></li>
+            <li><%= link_to "New Task", new_post_path%></li>
           </ul>
         </li>
         <li class="has-dropdown">
