--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,14 @@
+
 <div class='row'>
   <div class='large-12 small-12 columns'>
     <h1>Add something to do</h1>
   </div><!--12-->
-    <%= render 'posts/form' %>
+    <% if !current_user.nil? %>
+      <%= render 'posts/form' %>
+    <% else %>
+      <p>You must create an account and log in to access this feature.</p>
+      <%= link_to 'Log in', new_session_path %>
+    <% end %>
+
   </div><!--12-->
 </div><!--row-->
