--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,20 @@
 <div class="row">
   <div class='large-12 small-12 columns'>
-    <%= render 'posts/form' %>
+    <%= form_for @post do |p| %>
+      <label>
+        Title
+        <%= p.text_field :title, placeholder: 'Thing to do' %>
+      </label>
+      <label>
+        Body
+        <%= p.text_area :body, placeholder: 'Eat 10 bananas...' %>
+      </label>
+      <label>
+      <%= check_box_tag(:done) %>
+      <%= label_tag(:done, "Task done") %>
+    </label>
+      <%= p.submit 'Save post', class: 'button' %>
+    <% end %>
 
   </div>
 </div>
